--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+  padding: 0;
+  margin: 0;
 }
 .navDiv {
   width: 100%;
