--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   padding: 0;
   margin: 0;
 }
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: #fff;
+}
+a:hover {
+  cursor: pointer;
+  color: blue;
+}
 .navDiv {
   width: 100%;
 }
