testing on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   padding: 0;
   margin: 0;
 }
+html {
+  background-color: #000;
+}
 a {
   text-decoration: none;
 }
@@ -14,4 +17,5 @@ a:hover {
 }
 .navDiv {
   width: 100%;
+  border: 1px solid yellow;
 }
