--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 html {
   background-color: #000;
@@ -17,5 +18,4 @@ a:hover {
 }
 .navDiv {
   width: 100%;
-  border: 1px solid yellow;
 }
