--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ html {
 }
 a {
   text-decoration: none;
+  color: #fff;
 }
 a:visited {
   color: #fff;
@@ -37,5 +38,13 @@ a:hover {
   }
   100% {
     transform: translateX(1rem);
+  }
+}
+@keyframes swing {
+  0% {
+    transform: translateX(100%);
+  }
+  20% {
+    transform: translateX(-50%);
   }
 }
