added links to buttons

--- a/src/App.css
+++ b/src/App.css
@@ -42,9 +42,12 @@ a:hover {
 }
 @keyframes swing {
   0% {
-    transform: translateX(100%);
+    transform: translateX(200%);
   }
   20% {
     transform: translateX(-50%);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
