--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,9 @@ a:hover {
 #starprojects,
 #starcontact,
 #starback {
-  transition-duration: 0.7s;
+  position: relative;
+  /* top: 0.7rem; */
+  /* margin-top: 50%; */
   pointer-events: none;
   width: 20px;
   animation-duration: 1s;
@@ -52,6 +54,7 @@ a:hover {
 #divprojects,
 #divcontact,
 #divback {
+  pointer-events: none;
   position: absolute;
   pointer-events: none;
   animation-delay: 0.1s;
@@ -161,6 +164,6 @@ a:hover {
 }
 @keyframes slideIn {
   to {
-    left: 140%;
+    left: 100%;
   }
 }
