--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,7 @@ a:hover {
 }
 .sentence {
   position: relative;
+  animation-delay: 1s;
   animation-duration: 1s;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
@@ -75,7 +76,7 @@ a:hover {
   left: -100%;
 }
 .sentence:nth-child(even) {
-  left: 100%;
+  left: 110%;
 }
 /* keyframes */
 @keyframes slipIn {
