--- a/src/App.css
+++ b/src/App.css
@@ -65,11 +65,26 @@ a:hover {
   top: 0;
   left: -100%;
 }
+.animation_div {
+  border: 1px solid red;
+  position: relative;
+}
+.spaceship_wrapper {
+  position: absolute;
+  left: -1000%;
+  border: 1px solid green;
+  animation-name: swoop;
+  animation-delay: 2s;
+  animation-iteration-count: 1;
+  animation-duration: 4.5s;
+  /* animation-timing-function: cubic-bezier(0.33, 0.29, 0.33, 1.3); */
+  animation-fill-mode: forwards;
+}
 .sentence {
   position: relative;
   animation-delay: 1s;
   animation-duration: 1s;
-  animation-timing-function: linear;
+  animation-timing-function: cubic-bezier(0.33, 0.29, 0.33, 1.3);
   animation-fill-mode: forwards;
 }
 .sentence:nth-child(odd) {
@@ -79,6 +94,30 @@ a:hover {
   left: 110%;
 }
 /* keyframes */
+@keyframes swoop {
+  0% {
+    left: -1000%;
+  }
+  50% {
+    left: 80%;
+  }
+  100% {
+    left: 60%;
+  }
+}
+@keyframes fly {
+  0% {
+    top: -19vh;
+  }
+  100% {
+    top: -10vh;
+  }
+}
+@keyframes flyBy {
+  to {
+    left: -100%;
+  }
+}
 @keyframes slipIn {
   to {
     left: 0;
