--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ a:hover {
   animation-delay: 5s;
   animation-iteration-count: 1;
   animation-duration: 4.5s;
-  /* animation-timing-function: cubic-bezier(0.33, 0.29, 0.33, 1.3); */
+  animation-timing-function: cubic-bezier(0.33, 0.29, 0.33, 1.3);
   animation-fill-mode: forwards;
 }
 .sentence {
@@ -117,7 +117,10 @@ a:hover {
   }
 }
 @keyframes flyBy {
-  to {
+  0% {
+    visibility: visible;
+  }
+  100% {
     left: -1000%;
   }
 }
