--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,23 @@ a:hover {
   animation-timing-function: cubic-bezier(0.33, 0.29, 0.33, 1.3);
   animation-fill-mode: forwards;
 }
+.animationWrapper {
+  margin: 3rem 0;
+  position: sticky;
+  top: 0;
+}
+@media screen and (min-width: 411px) {
+  .animationWrapper {
+    top: 3rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .animationWrapper {
+    position: relative;
+    top: 20vh;
+    /* border: 2px solid red; */
+  }
+}
 .sentence {
   position: relative;
   animation-delay: 1s;
@@ -82,10 +99,10 @@ a:hover {
   animation-fill-mode: forwards;
 }
 .sentence:nth-child(odd) {
-  left: -100%;
+  left: -1000%;
 }
 .sentence:nth-child(even) {
-  left: 110%;
+  left: 1000%;
 }
 /* keyframes */
 @keyframes swoop {
