--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,8 @@ a:hover {
   }
 }
 .sentence {
+  margin: 0.2rem;
+  line-height: 1.3;
   position: relative;
   -webkit-animation-delay: 1s;
   animation-delay: 1s;
