--- a/src/App.css
+++ b/src/App.css
@@ -65,8 +65,8 @@ a:hover {
   pointer-events: none;
   position: absolute;
   pointer-events: none;
-  -webkit-animation-delay: 0.1s;
-  animation-delay: 0.1s;
+  /* -webkit-animation-delay: 0.1s;
+  animation-delay: 0.1s; */
   -webkit-animation-duration: 0.3s;
   animation-duration: 0.3s;
   -webkit-animation-timing-function: linear;
