--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/* Fonts:  */
+/* font-family: "Roboto Mono", monospace; */
+/* font-family: 'Josefin Sans', sans-serif; */
+
 * {
   padding: 0;
   margin: 0;
