fixed contact page

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /* Fonts:  */
 /* font-family: "Roboto Mono", monospace; */
 /* font-family: 'Josefin Sans', sans-serif; */
+/* green: #67cf97 */
 
 * {
   padding: 0;
